# hello-imgui-template

./: .gitignore  CMakeLists.txt  hello_world.main.cpp
include/: SharedProps.hpp  SmoothValueLog2.hpp  hello_world.audio.hpp  hello_world.gui.hpp
include/Clover/: AudioCallback.hpp  Interface.hpp  SampleClock.hpp
